Updated Resume Doc and Links

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <div class="social-links">
                         <ul>
                         	<li>
-                                <a href="docs/Resume_2025_temp.pdf" target="_blank" rel="noreferrer noopener" aria-label="Resume (opens in a new tab)">
+                                <a href="docs/DanLane_Resume.pdf" target="_blank" rel="noreferrer noopener" aria-label="Resume (opens in a new tab)">
                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="icon" aria-hidden="true">
                                         <path d="M14,2H6A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2M18,20H6V4H13V9H18V20Z"/>
                                         <circle cx="12" cy="13" r="2"/>
@@ -126,7 +126,7 @@
                         </p>
                         <p>I welcome opportunities to collaborate on ambitious projects in robotics, autonomy, and advanced system integration across aerospace, defense, and emerging technology sectors.</p>
                         <div class="resume-link">
-                            <a href="docs/Resume_2025_temp.pdf" class="resume-button" target="_blank" rel="noreferrer noopener" aria-label="View Full Resume (opens in a new tab)">
+                            <a href="docs/DanLane_Resume.pdf" class="resume-button" target="_blank" rel="noreferrer noopener" aria-label="View Full Resume (opens in a new tab)">
                                 View Full Resume
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="external-link-icon" aria-hidden="true">
                                     <path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"></path>
@@ -247,7 +247,7 @@
                             </li>
                         </ol>
                         <div class="resume-link">
-                            <a href="docs/Resume_2025_temp.pdf" class="resume-button" target="_blank" rel="noreferrer noopener" aria-label="View Full Resume (opens in a new tab)">
+                            <a href="docs/DanLane_Resume.pdf" class="resume-button" target="_blank" rel="noreferrer noopener" aria-label="View Full Resume (opens in a new tab)">
                                 View Full Resume
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="external-link-icon" aria-hidden="true">
                                     <path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"></path>
@@ -438,7 +438,7 @@
     <footer class="footer">
         <div class="footer-content">
             <p>
-                <a href="docs/Resume_2025_temp.pdf" target="_blank" rel="noreferrer noopener" aria-label="Resume (opens in a new tab)">Resume</a> |
+                <a href="docs/DanLane_Resume.pdf" target="_blank" rel="noreferrer noopener" aria-label="Resume (opens in a new tab)">Resume</a> |
                 <a href="https://github.com/DPLane2720" target="_blank" rel="noreferrer noopener" aria-label="GitHub (opens in a new tab)">GitHub</a> | 
                 <a href="https://linkedin.com/in/daniellane" target="_blank" rel="noreferrer noopener" aria-label="LinkedIn (opens in a new tab)">LinkedIn</a> | 
                 <a href="mailto:DPLane2720@gmail.com" aria-label="Email">Email</a>
