SVG Arrow Hover animation fixed

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                             <a href="/">Daniel Lane</a>
                         </h1>
                         <h2 class="title">Robotics & Autonomous Systems Engineer</h2>
-                        <p class="tagline">I develop autonomous systems that bridge cutting-edge research with real-world applications.</p>
+                        <!-- <p class="tagline">I develop autonomous systems that bridge cutting-edge research with real-world applications.</p> -->
+                        <p class="tagline">I build tools and systems that make complex problems easier to solve.</p>
                     </div>
                     
                     <!-- Social links -->
@@ -118,13 +119,12 @@
                             My journey into autonomous systems began during my transition from enterprise IT leadership to graduate research in 2017. What started as curiosity about robotics has evolved into specialized expertise in sensor fusion, machine learning, and real-time perception systems for autonomous platforms.
                         </p>
                         <p>
-                            Currently, I'm completing my PhD in Mechanical Engineering at Embry-Riddle Aeronautical University, where my research focuses on 
-                            <a href="#" class="inline-link">LiDAR-camera fusion for maritime autonomy</a>. I lead perception system development for our <a href="https://robonation.org/programs/robotx/" target="_blank" class="inline-link">Maritime RobotX Challenge</a> team and work on cutting-edge sensor integration for autonomous surface vessels.
+                            Currently, I'm completing my PhD in Mechanical Engineering at Embry-Riddle Aeronautical University, where my research focuses on LiDAR-camera fusion for maritime autonomy. I currently lead the development on the perception system for ERAU's Team Minion's UAV, which competes in the <a href="https://robonation.org/programs/robotx/" target="_blank" class="inline-link">RobotX Maritime Challenge</a>.
                         </p>
                         <p>
-                            When I'm not developing algorithms or testing autonomous systems, I enjoy exploring Florida's coastline, working on personal robotics projects, and staying current with the latest advances in AI and autonomous vehicle technology.
+                            When I'm not developing algorithms or testing autonomous systems, I enjoy exploring Florida with my dog and working on personal projects, and staying current with the latest advances in AI and autonomous vehicle technology.
                         </p>
-                        <p>I welcome opportunities to collaborate on ambitious projects in robotics, autonomy, and advanced system integration across aerospace, defense, and emerging technology sectors.</p>
+                        <!-- <p>I welcome opportunities to collaborate on ambitious projects in robotics, autonomy, and advanced system integration across aerospace, defense, and emerging technology sectors.</p> -->
                         <div class="resume-link">
                             <a href="docs/DanLane_Resume.pdf" class="resume-button" target="_blank" rel="noreferrer noopener" aria-label="View Full Resume (opens in a new tab)">
                                 View Full Resume
