Additional Bug Fixes

--- a/index.html
+++ b/index.html
@@ -338,94 +338,129 @@
                     <div class="section-content">
                         <ul class="projects-list">
                             <li class="project-item">
-                                <div class="project-card">
-                                    <div class="project-overlay"></div>
-                                    <div class="project-content">
-                                        <h3 class="project-title">
-                                            <div>
-                                                <span>DS 625 - Data Compression</span>
-                                            </div>
-                                        </h3>
-                                        <p class="project-description">Explored neural networks for solving fundamental physics equations, addressing challenges like hyperparameter tuning and model inflexibility. Suggested improvements for sparse solutions and alternative methods like genetic algorithms.</p>
-                                        <ul class="tech-tags" aria-label="Technologies used">
-                                            <li class="tech-tag">Neural Networks</li>
-                                            <li class="tech-tag">System Identification</li>
-                                            <li class="tech-tag">Genetic Algorithms</li>
-                                        </ul>
+                                <a href="docs/DS 625 - Data Compression.pdf" target="_blank" rel="noreferrer noopener" aria-label="DS 625 - Data Compression project details (opens in a new tab)">
+                                    <div class="project-card">
+                                        <div class="project-overlay"></div>
+                                        <div class="project-content">
+                                            <h3 class="project-title">
+                                                <div>
+                                                    <span>Exploring the Potential of Neural Networks
+for Nonlinear System Identification</span>
+                                                    <!-- <span>DS 625 - Data Compression</span> -->
+                                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="external-link-icon" aria-hidden="true">
+                                                        <path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"></path>
+                                                    </svg>
+                                                </div>
+                                            </h3>
+                                            <p class="project-description">Explored neural networks for solving fundamental physics equations, addressing challenges like hyperparameter tuning and model inflexibility. Suggested improvements for sparse solutions and alternative methods like genetic algorithms.</p>
+                                            <ul class="tech-tags" aria-label="Technologies used">
+                                                <li class="tech-tag">Neural Networks</li>
+                                                <li class="tech-tag">System Identification</li>
+                                                <li class="tech-tag">Genetic Algorithms</li>
+                                            </ul>
+                                        </div>
                                     </div>
-                                </div>
+                                </a>
                             </li>
                             <li class="project-item">
-                                <div class="project-card">
-                                    <div class="project-overlay"></div>
-                                    <div class="project-content">
-                                        <h3 class="project-title">
-                                            <div>
-                                                <span>EE 505 - Advanced Mechatronics</span>
-                                            </div>
-                                        </h3>
-                                        <p class="project-description">Developed PongBot, an autonomous beer pong-playing robot integrating robotics, computer vision, and iterative design for high accuracy and interactive applications.</p>
-                                        <ul class="tech-tags" aria-label="Technologies used">
-                                            <li class="tech-tag">Robotics</li>
-                                            <li class="tech-tag">Computer Vision</li>
-                                            <li class="tech-tag">Autonomous Systems</li>
-                                        </ul>
+                                <!-- <a href="docs/EE 505 - Advanced Mechatronics.pdf" target="_blank" rel="noreferrer noopener" aria-label="EE 505 - Advanced Mechatronics project details (opens in a new tab)"> -->
+                                <a href="#blank" target="_blank" rel="noreferrer noopener" aria-label="EE 505 - Advanced Mechatronics project details (opens in a new tab)">
+                                    <div class="project-card">
+                                        <div class="project-overlay"></div>
+                                        <div class="project-content">
+                                            <h3 class="project-title">
+                                                <div>
+                                                    <span>PongBot - An Autonomous Ping-Pong Ball Launching Robot</span>
+                                                    <!-- <span>EE 505 - Advanced Mechatronics</span> -->
+                                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="external-link-icon" aria-hidden="true">
+                                                        <path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"></path>
+                                                    </svg>
+                                                </div>
+                                            </h3>
+                                            <p class="project-description">PongBot is an autonomous robot with equiped computer-vision, capable of reliablby launching ping-pong balls into Solo cups at a distance of 6 meters.</p>
+                                            <ul class="tech-tags" aria-label="Technologies used">
+                                                <li class="tech-tag">Robotics</li>
+                                                <li class="tech-tag">Computer Vision</li>
+                                                <li class="tech-tag">Autonomous Systems</li>
+                                            </ul>
+                                        </div>
                                     </div>
-                                </div>
+                                </a>
                             </li>
                             <li class="project-item">
-                                <div class="project-card">
-                                    <div class="project-overlay"></div>
-                                    <div class="project-content">
-                                        <h3 class="project-title">
-                                            <div>
-                                                <span>MA 506 - Prob and Stat Inference</span>
-                                            </div>
-                                        </h3>
-                                        <p class="project-description">Investigated Dynamic Mode Decomposition (DMD) and Koopman operator theory for traffic system identification, comparing computational efficiency and accuracy trade-offs.</p>
-                                        <ul class="tech-tags" aria-label="Technologies used">
-                                            <li class="tech-tag">Dynamic Mode Decomposition</li>
-                                            <li class="tech-tag">Koopman Operator</li>
-                                            <li class="tech-tag">Traffic Modeling</li>
-                                        </ul>
+                                <!-- <a href="docs/MA 506 - Prob and Stat Inference.pdf" target="_blank" rel="noreferrer noopener" aria-label="MA 506 - Prob and Stat Inference project details (opens in a new tab)"> -->
+                                <a href="#blank" target="_blank" rel="noreferrer noopener" aria-label="MA 506 - Prob and Stat Inference project details (opens in a new tab)">
+                                    <div class="project-card">
+                                        <div class="project-overlay"></div>
+                                        <div class="project-content">
+                                            <h3 class="project-title">
+                                                <div>
+                                                    <span>Dynamic Mode Decomposition for Dynamic System Estimation</span>
+                                                    <!-- <span>MA 506 - Prob and Stat Inference</span> -->
+                                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="external-link-icon" aria-hidden="true">
+                                                        <path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"></path>
+                                                    </svg>
+                                                </div>
+                                            </h3>
+                                            <p class="project-description">Investigated Dynamic Mode Decomposition (DMD) and Koopman operator theory for traffic system identification, comparing computational efficiency and accuracy trade-offs.</p>
+                                            <ul class="tech-tags" aria-label="Technologies used">
+                                                <li class="tech-tag">Dynamic Mode Decomposition</li>
+                                                <li class="tech-tag">Koopman Operator</li>
+                                                <li class="tech-tag">Traffic Modeling</li>
+                                            </ul>
+                                        </div>
                                     </div>
-                                </div>
+                                </a>
                             </li>
                             <li class="project-item">
-                                <div class="project-card">
-                                    <div class="project-overlay"></div>
-                                    <div class="project-content">
-                                        <h3 class="project-title">
-                                            <div>
-                                                <span>ME 595 - Complex Systems</span>
-                                            </div>
-                                        </h3>
-                                        <p class="project-description">Compared binary and multivariate voter models for consensus formation in networks, analyzing how topology and parameters affect convergence rates and stability.</p>
-                                        <ul class="tech-tags" aria-label="Technologies used">
-                                            <li class="tech-tag">Voter Models</li>
-                                            <li class="tech-tag">Network Topology</li>
-                                            <li class="tech-tag">Complex Systems</li>
-                                        </ul>
+                                <a href="#blank" target="_blank" rel="noreferrer noopener" aria-label="ME 595 - Complex Systems project details (opens in a new tab)"></a>
+                                <!-- <a href="docs/ME 595 - Complex Systems.pdf" target="_blank" rel="noreferrer noopener" aria-label="ME 595 - Complex Systems project details (opens in a new tab)"> -->
+                                    <div class="project-card">
+                                        <div class="project-overlay"></div>
+                                        <div class="project-content">
+                                            <h3 class="project-title">
+                                                <div>
+                                                    <span>System Dynamics of Group Opinion and Consensus Formation</span>
+                                                    <!-- <span>ME 595 - Complex Systems</span> -->
+                                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="external-link-icon" aria-hidden="true">
+                                                        <path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"></path>
+                                                    </svg>
+                                                </div>
+                                            </h3>
+                                            <p class="project-description">Compared binary and multivariate voter models for consensus formation in networks, analyzing how topology and parameters affect convergence rates and stability.</p>
+                                            <ul class="tech-tags" aria-label="Technologies used">
+                                                <li class="tech-tag">Voter Models</li>
+                                                <li class="tech-tag">Network Topology</li>
+                                                <li class="tech-tag">Complex Systems</li>
+                                            </ul>
+                                        </div>
                                     </div>
-                                </div>
+                                </a>
                             </li>
                             <li class="project-item">
-                                <div class="project-card">
-                                    <div class="project-overlay"></div>
-                                    <div class="project-content">
-                                        <h3 class="project-title">
-                                            <div>
-                                                <span>ME 622 - Path Planning and Navigation</span>
-                                            </div>
-                                        </h3>
-                                        <p class="project-description">Evaluated path planning algorithms for differentially steered robots with jumping capabilities, comparing A* and RRT* methods for obstacle navigation efficiency.</p>
-                                        <ul class="tech-tags" aria-label="Technologies used">
-                                            <li class="tech-tag">Path Planning</li>
-                                            <li class="tech-tag">A* Algorithm</li>
-                                            <li class="tech-tag">RRT* Algorithm</li>
-                                        </ul>
+                                <a href="#blank" target="_blank" rel="noreferrer noopener" aria-label="ME 622 - Path Planning and Navigation project details (opens in a new tab)"></a>
+                                <!-- <a href="docs/ME 622 - Path Planning and Navigation.pdf" target="_blank" rel="noreferrer noopener" aria-label="ME 622 - Path Planning and Navigation project details (opens in a new tab)"> -->
+                                    <div class="project-card">
+                                        <div class="project-overlay"></div>
+                                        <div class="project-content">
+                                            <h3 class="project-title">
+                                                <div>
+                                                    <span>Path Planning of a Differentially Steered Robot with Jumping Capability</span>
+                                                    <!-- <span>ME 622 - Path Planning and Navigation</span> -->
+                                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="external-link-icon" aria-hidden="true">
+                                                        <path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"></path>
+                                                    </svg>
+                                                </div>
+                                            </h3>
+                                            <p class="project-description">Evaluated path planning algorithms for differentially steered robots with jumping capabilities, comparing A* and RRT* methods for obstacle navigation efficiency in 2D and pseudo-3D maps.</p>
+                                            <ul class="tech-tags" aria-label="Technologies used">
+                                                <li class="tech-tag">Path Planning</li>
+                                                <li class="tech-tag">A* Algorithm</li>
+                                                <li class="tech-tag">RRT* Algorithm</li>
+                                            </ul>
+                                        </div>
                                     </div>
-                                </div>
+                                </a>
                             </li>
                         </ul>
                     </div>
