Fixed all minor CSS issues.

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                         <div class="resume-link">
                             <a href="docs/DanLane_Resume.pdf" class="resume-button" target="_blank" rel="noreferrer noopener" aria-label="View Full Resume (opens in a new tab)">
                                 View Full Resume
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="external-link-icon" aria-hidden="true">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="button-link-icon" aria-hidden="true">
                                     <path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"></path>
                                 </svg>
                             </a>
@@ -296,6 +296,22 @@
                                             </div>
                                         </h3>
                                         <p class="project-description">Developed a novel framework for recovering nonlinear system dynamics through data-driven and information-theoretic methods. Published in Journal of Physics: Complexity and presented at international MECC 2023 conference.</p>
+                                        <div class="publication-item">
+                                            <a href="https://doi.org/10.1088/2632-072X/ad3ed6" target="_blank" rel="noreferrer noopener">
+                                                <span class="inline-link">Validating a data-driven framework for vehicular traffic modeling.<br>doi: 10.1088/2632-072X/ad3ed6</span>
+                                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="external-link-icon" aria-hidden="true">
+                                                    <path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"></path>
+                                                </svg>
+                                            </a>
+                                        </div>
+                                        <div class="publication-item">
+                                            <a href="https://doi.org/10.1016/j.ifacol.2023.12.051" target="_blank" rel="noreferrer noopener">
+                                                <span class="inline-link">Using information theory to detect model structure with application in vehicular traffic systems.<br>doi: 10.1016/j.ifacol.2023.12.051.</span>
+                                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="external-link-icon" aria-hidden="true">
+                                                    <path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"></path>
+                                                </svg>
+                                            </a>
+                                        </div>
                                         <ul class="tech-tags" aria-label="Technologies used">
                                             <li class="tech-tag">MATLAB</li>
                                             <li class="tech-tag">Python</li>
@@ -413,7 +429,7 @@ for Nonlinear System Identification</span>
                                 </a>
                             </li>
                             <li class="project-item">
-                                <a href="#blank" target="_blank" rel="noreferrer noopener" aria-label="ME 595 - Complex Systems project details (opens in a new tab)"></a>
+                                <a href="#blank" target="_blank" rel="noreferrer noopener" aria-label="ME 595 - Complex Systems project details (opens in a new tab)">
                                 <!-- <a href="docs/ME 595 - Complex Systems.pdf" target="_blank" rel="noreferrer noopener" aria-label="ME 595 - Complex Systems project details (opens in a new tab)"> -->
                                     <div class="project-card">
                                         <div class="project-overlay"></div>
@@ -437,8 +453,9 @@ for Nonlinear System Identification</span>
                                     </div>
                                 </a>
                             </li>
+                            </li>
                             <li class="project-item">
-                                <a href="#blank" target="_blank" rel="noreferrer noopener" aria-label="ME 622 - Path Planning and Navigation project details (opens in a new tab)"></a>
+                                <a href="#blank" target="_blank" rel="noreferrer noopener" aria-label="ME 622 - Path Planning and Navigation project details (opens in a new tab)">
                                 <!-- <a href="docs/ME 622 - Path Planning and Navigation.pdf" target="_blank" rel="noreferrer noopener" aria-label="ME 622 - Path Planning and Navigation project details (opens in a new tab)"> -->
                                     <div class="project-card">
                                         <div class="project-overlay"></div>
