--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <div class="resume-link">
                             <a href="docs/DanLane_Resume.pdf" class="resume-button" target="_blank" rel="noreferrer noopener" aria-label="View Full Resume (opens in a new tab)">
                                 View Full Resume
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="external-link-icon" aria-hidden="true">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="button-link-icon" aria-hidden="true">
                                     <path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"></path>
                                 </svg>
                             </a>
