--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
                                     </svg>
                                 </a>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <a href="https://linkedin.com/in/daniellane" target="_blank" aria-label="LinkedIn (opens in a new tab)">
                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="icon" aria-hidden="true">
                                         <path d="M20.5 2h-17A1.5 1.5 0 002 3.5v17A1.5 1.5 0 003.5 22h17a1.5 1.5 0 001.5-1.5v-17A1.5 1.5 0 0020.5 2zM8 19H5v-9h3zM6.5 8.25A1.75 1.75 0 118.3 6.5a1.78 1.78 0 01-1.8 1.75zM19 19h-3v-4.74c0-1.42-.6-1.93-1.38-1.93A1.74 1.74 0 0013 14.19a.66.66 0 000 .14V19h-3v-9h2.9v1.3a3.11 3.11 0 012.7-1.4c1.55 0 3.36.86 3.36 3.66z"></path>
                                     </svg>
                                 </a>
-                            </li>
+                            </li> -->
                             <li>
                                 <a href="mailto:DPLane2720@gmail.com" aria-label="Email">
                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="icon" aria-hidden="true">
@@ -492,7 +492,7 @@ for Nonlinear System Identification</span>
             <p>
                 <a href="docs/DanLane_Resume.pdf" target="_blank" rel="noreferrer noopener" aria-label="Resume (opens in a new tab)">Resume</a> |
                 <a href="https://github.com/DPLane2720" target="_blank" rel="noreferrer noopener" aria-label="GitHub (opens in a new tab)">GitHub</a> | 
-                <a href="https://linkedin.com/in/daniellane" target="_blank" rel="noreferrer noopener" aria-label="LinkedIn (opens in a new tab)">LinkedIn</a> | 
+                <!-- <a href="https://linkedin.com/in/daniellane" target="_blank" rel="noreferrer noopener" aria-label="LinkedIn (opens in a new tab)">LinkedIn</a> |  -->
                 <a href="mailto:DPLane2720@gmail.com" aria-label="Email">Email</a>
             </p>
         </div>
